--- a/index.html
+++ b/index.html
@@ -27,6 +27,83 @@
                 </div>
             </nav>
         </header>
+
+        <div class="container">
+            <div class="row mt-3">
+                <div class="col-3">
+                    <div class="card mb-2">
+                        <img src="http://www.lorempixel.com/500/500" class="card-img-top" alt="image-card-1">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card mb-2">
+                        <img src="http://www.lorempixel.com/500/500" class="card-img-top" alt="image-card-1">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card mb-2">
+                        <img src="http://www.lorempixel.com/500/500" class="card-img-top" alt="image-card-1">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card mb-3">
+                        <img src="http://www.lorempixel.com/500/500" class="card-img-top" alt="image-card-1">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card mb-2">
+                        <img src="http://www.lorempixel.com/500/500" class="card-img-top" alt="image-card-1">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card mb-2">
+                        <img src="http://www.lorempixel.com/500/500" class="card-img-top" alt="image-card-1">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card mb-2">
+                        <img src="http://www.lorempixel.com/500/500" class="card-img-top" alt="image-card-1">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="card mb-3">
+                        <img src="http://www.lorempixel.com/500/500" class="card-img-top" alt="image-card-1">
+                        <div class="card-body">
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
